Add detach support. From martin@. "Works for me."

Addresses PR 44283.